# kynigos-law

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
config/: search_queries.yml
dental_claim_ledger/: __init__.py  cli.py  config.py  extractor.py  fetcher.py  models.py  report.py  search.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/api/lead/: route.ts
src/app/blog/: page.tsx
src/app/blog/[slug]/: page.tsx
src/app/contact/: page.tsx
src/app/how-it-works/: page.tsx
src/app/practice-areas/: page.tsx
src/app/practice-areas/capital-markets/: page.tsx
src/app/practice-areas/contract-review/: page.tsx
src/app/practice-areas/family-law/: page.tsx
src/app/practice-areas/landlord-tenant/: page.tsx
src/app/white-papers/: page.tsx
src/components/: Footer.tsx  HeadlineReel.tsx  Nav.tsx  TickerBar.tsx  WhitePaperGate.tsx
src/content/: posts.ts
src/content/blog/: i-have-been-the-client.md  i-watched-the-meter-run.md  why-divorce-makes-you-bad-at-math.md  your-lawyer-has-an-incentive-problem.md
tests/: test_config.py  test_extractor.py  test_report.py
tests/fixtures/: claims.html
