[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dental-claim-ledger"
version = "0.1.0"
description = "Reproducible ledger for public dental advertising credential claims."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
dental-claim-ledger = "dental_claim_ledger.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
